@@ -388,25 +388,25 @@
 <div class="header_section sticky collapsable">output<span class="count">( {_it./result-1.length} )</span></div>
 <table class="budget result sortable">
 	{result-table}
-	{_it./indicator:/result_indicator||}
+	{_it./result-1:/result_indicator||}
 </table>
 #^result-2
 <div class="header_section sticky collapsable">outcome<span class="count">( {_it./result-2.length} )</span></div>
 <table class="budget result sortable">
 	{result-table}
-	{_it./indicator:/result_indicator||}
+	{_it./result-2:/result_indicator||}
 </table>
 #^result-3
 <div class="header_section sticky collapsable">impact<span class="count">( {_it./result-3.length} )</span></div>
 <table class="budget result sortable">
 	{result-table}
-	{_it./indicator:/result_indicator||}
+	{_it./result-3:/result_indicator||}
 </table>
 #^result-9
 <div class="header_section sticky collapsable">other<span class="count">( {_it./result-9.length} )</span></div>
 <table class="budget result sortable">
 	{result-table}
-	{_it./indicator:/result_indicator||}
+	{_it./result-9:/indicator||}
 </table>
 
 #^result-table
@@ -420,22 +420,16 @@
 	</tr>
 </thead>
 
-#^/result-1
-{_it./indicator:/result_indicator||}
-#^/result-2
-{_it./indicator:/result_indicator||}
-#^/result-3
-{_it./indicator:/result_indicator||}
-#^/result-9
-{_it./indicator:/result_indicator||}
-
 <!--	RESULT INDICATOR	-->
 #^/result_indicator
+{_it./indicator:/result_indicator_row||}
+
+#^/result_indicator_row
 <tr class="row_count">
 	<td class="result_indi">{_it./title/narrative&&_it:/indicator_text||}</td>
-	<td class="result_base">{_it./baseline&&_it:/result_baseline||}</td>
-	<td class="result_target">{_it./period&&_it:/result_period_target||}</td>
-	<td class="result_actual">{_it./period&&_it:/result_period_actual||}</td>	
+	<td class="result_base">{_it.@measure&&_it:/result_measure||}{_it./baseline&&_it:/result_baseline||}</td>
+	<td class="result_target">{_it.@measure&&_it:/result_measure||}{_it./period&&_it:/result_period_target||}</td>
+	<td class="result_actual">{_it.@measure&&_it:/result_measure||}{_it./period&&_it:/result_period_actual||}</td>	
 	<td class="result_period">{_it./period&&_it:/result_period||}</td>	
 </tr>
 
@@ -473,6 +467,9 @@
 #^/result_uri
 <div><span class="ref">URI</span> <a href="{_it.@indicator-uri||}">Internal vocabulary</a></div>
 
+#^/result_measure
+<div class="result_indi_measure">{_it.@measure-name||}</div>
+
 #^/result_baseline
 {_it./baseline:/value}
 {_it./baseline@year&&_it:/baseline_year||}
@@ -496,7 +493,7 @@
 <div>YEAR: {_it.@year||}</div>
 
 #^/value
-<div>{_it.@value||}</div>
+<div class="result_value">{_it.@value||}</div>
 		
 #^/period
 <div class="result_period_time"><span>{_it./period-start@iso-date||}</span> ~ <span>{_it./period-end@iso-date||}</span></div>
