@@ -2,6 +2,7 @@ Development Portal (2020-02-28 shi)
 ==============================
 Display indicator document-link
 Move activity status close to dates
+Display indicator measure
 
 
 Development Portal (2020-02-11 shi)
